# SudokuSolver

./: .gitignore  CMakeLists.txt  main.cc
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/common/include/common/: basic_types.h  field_type.h  game_type.h  utils.h
modules/common/src/: game_type.cc  utils.cc
modules/core/: CMakeLists.txt
modules/core/include/core/: sudoku_context.h  thread_worker.h
modules/core/src/: sudoku_context.cc  thread_worker.cc
resources/: input.txt
scripts/: ninja_make.sh
